[package]
name = "aw-upscale"
version = "0.1.0"
edition = "2021"
description = "A small library to abstract over various image upscalers"
readme = "README.md"
license = "MIT"
keywords = ["waifu2x"]
homepage = "https://github.com/awused/aw-upscale"
repository = "https://github.com/awused/aw-upscale"


[dependencies]
process_control = "3.5.1"
derive_more = { version = "0.99.17", default-features = false, features = [ "from" ] }
