[package]
name = "aw-upscale"
version = "0.1.0"
edition = "2021"
description = "A small library to abstract over various image upscalers"
readme = "README.md"
license = "MIT"
keywords = ["waifu2x"]
homepage = "https://github.com/awused/aw-upscale"
repository = "https://github.com/awused/aw-upscale"


[dependencies]
process_control = "4.2.2"
derive_more = { version = "1.0.0", default-features = false, features = [ "from" ] }
