[package]
name = "aw-upscale"
version = "0.1.0"
edition = "2024"
description = "A small library to abstract over various image upscalers"
readme = "README.md"
license = "MIT"
keywords = ["waifu2x"]
homepage = "https://github.com/awused/aw-upscale"
repository = "https://github.com/awused/aw-upscale"


[dependencies]
process_control = "5.0.0"
derive_more = { version = "2.0.1", default-features = false, features = [ "from" ] }
