[package]
name = "aw-upscale-server"
version = "0.1.0"
edition = "2021"
description = "A server to run upscaling on another machine"
readme = "README.md"
license = "MIT"
keywords = ["waifu2x"]
homepage = "https://github.com/awused/aw-upscale/server"
repository = "https://github.com/awused/aw-upscale/server"


[dependencies]
aw-upscale = { path = ".." }
clap = { version = "4.5.17", features = ["derive"] }
futures = { version = "0.3.30", default-features = false }
once_cell = "1.19.0"
prost = { version = "0.13.2", default-features = false, features = ["std"] }
prost-types = "0.13.2"
tempfile = "3.12.0"
tokio = { version = "1.40.0", features = ["fs", "net", "macros", "process", "rt", "rt-multi-thread", "sync"] }
tonic = "0.12.2"

[build-dependencies]
tonic-build = "0.12.2"
prost-build = "0.13.2"
