[package]
name = "aw-upscale-server"
version = "0.1.0"
edition = "2024"
description = "A server to run upscaling on another machine"
readme = "README.md"
license = "MIT"
keywords = ["waifu2x"]
homepage = "https://github.com/awused/aw-upscale/server"
repository = "https://github.com/awused/aw-upscale/server"


[dependencies]
aw-upscale = { path = ".." }
clap = { version = "4.5.41", features = ["derive"] }
futures = { version = "0.3.31", default-features = false }
once_cell = "1.21.3"
prost = { version = "0.13.5", default-features = false, features = ["std"] }
prost-types = "0.13.5"
tempfile = "3.20.0"
tokio = { version = "1.46.1", features = ["fs", "net", "macros", "process", "rt", "rt-multi-thread", "sync"] }
tonic = "0.13.1"

[build-dependencies]
tonic-build = "0.13.1"
prost-build = "0.13.5"
