[package]
name = "aw-upscale-server"
version = "0.1.0"
edition = "2024"
description = "A server to run upscaling on another machine"
readme = "README.md"
license = "MIT"
keywords = ["waifu2x"]
homepage = "https://github.com/awused/aw-upscale/server"
repository = "https://github.com/awused/aw-upscale/server"


[dependencies]
aw-upscale = { path = ".." }
clap = { version = "4.5.47", features = ["derive"] }
futures = { version = "0.3.31", default-features = false }
prost = { version = "0.14.1", default-features = false, features = ["std"] }
prost-types = "0.14.1"
tempfile = "3.22.0"
tokio = { version = "1.47.1", features = ["fs", "net", "macros", "process", "rt", "rt-multi-thread", "sync"] }
tonic = "0.14.2"
tonic-prost = "0.14.2"

[build-dependencies]
tonic-prost-build = "0.14.2"
prost-build = "0.14.1"
